--- a/src/OpenID/OpenIdWebRingSsoRelyingParty/Web.config
+++ b/src/OpenID/OpenIdWebRingSsoRelyingParty/Web.config
@@ -4,20 +4,38 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler" requirePermission="false" />
     <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
-
-
-
       <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
       <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
     </sectionGroup>
   </configSections>
+  <log4net>
+        <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+            <file value="app_data/RelyingParty.log" />
+            <appendToFile value="true" />
+            <rollingStyle value="Size" />
+            <maxSizeRollBackups value="10" />
+            <maximumFileSize value="100KB" />
+            <staticLogFileName value="true" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date (GMT%date{%z}) [%thread] %-5level %logger - %message%newline" />
+            </layout>
+        </appender>
+        <!-- Setup the root category, add the appenders and set the default level -->
+        <root>
+            <level value="INFO" />
+            <appender-ref ref="RollingFileAppender" />
+        </root>
+        <!-- Specify the level for some specific categories -->
+        <logger name="DotNetOpenAuth">
+            <level value="ALL" />
+        </logger>
+    </log4net>
   <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
        which is necessary for OpenID urls with unicode characters in the domain/host name. 
        It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
   <!-- this is an optional configuration section where aspects of dotnetopenauth can be customized -->
   <dotNetOpenAuth>
-
     <messaging>
       <untrustedWebRequest>
         <whitelistHosts>
@@ -28,8 +46,6 @@
         </whitelistHosts>
       </untrustedWebRequest>
     </messaging>
-
-
     <!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
     <reporting enabled="true" />
     <!-- This is an optional configuration section where aspects of dotnetopenauth can be customized. -->
@@ -39,20 +55,20 @@
         <security requireSsl="false">
           <!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
           <!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
-						<add endpoint="https://www.google.com/accounts/o8/ud" />
-					</trustedProviders>-->
+            <add endpoint="https://www.google.com/accounts/o8/ud" />
+          </trustedProviders>-->
         </security>
         <behaviors>
           <!-- The following OPTIONAL behavior allows RPs to use SREG only, but be compatible
-					     with OPs that use Attribute Exchange (in various formats). -->
+               with OPs that use Attribute Exchange (in various formats). -->
           <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
         </behaviors>
       </relyingParty>
     </openid>
   </dotNetOpenAuth>
   <appSettings>
-    <add key="SsoProviderOPIdentifier" value="http://localhost:39167/" />
-    <add key="SsoProviderOPEndpoint" value="http://localhost:39167/server.aspx" />
+    <add key="SsoProviderOPIdentifier" value="http://localhost:6233/" />
+    <add key="SsoProviderOPEndpoint" value="http://localhost:6233/openid/provider" />
   </appSettings>
   <connectionStrings />
   <system.web>
@@ -62,7 +78,7 @@
             affects performance, set this value to true only 
             during development.
         -->
-    <compilation debug="false" targetFramework="4.0">
+    <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <remove assembly="DotNetOpenAuth.Contracts" />
       </assemblies>
@@ -90,9 +106,8 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-    <httpModules>
-      <add name="AuthTicketRoles" type="OpenIdWebRingSsoRelyingParty.AuthTicketRoles, OpenIdWebRingSsoRelyingParty" />
-    </httpModules>
+    <!--<httpModules>
+    </httpModules>-->
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
   </system.web>
   <!-- 
@@ -114,17 +129,19 @@
     </system.web>
   </location>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="AuthTicketRoles" type="OpenIdWebRingSsoRelyingParty.AuthTicketRoles, OpenIdWebRingSsoRelyingParty" />
+      
+    </modules>
   </system.webServer>
-
-
-
   <system.net>
-    <defaultProxy enabled="true" />
+    <defaultProxy enabled="true">
+      <proxy proxyaddress="http://localhost:8888" usesystemdefault="true" bypassonlocal="False" />
+    </defaultProxy>
     <settings>
       <!-- This setting causes .NET to check certificate revocation lists (CRL) 
-			     before trusting HTTPS certificates.  But this setting tends to not 
-			     be allowed in shared hosting environments. -->
+           before trusting HTTPS certificates.  But this setting tends to not 
+           be allowed in shared hosting environments. -->
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
   </system.net>
@@ -132,25 +149,29 @@
     <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
     <legacyHMACWarning enabled="0" />
     <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
-		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-		 -->
+         to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+     -->
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.13.0" newVersion="2.2.13.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <uri>
     <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
-		     which is necessary for OpenID urls with unicode characters in the domain/host name.
-		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
+         which is necessary for OpenID urls with unicode characters in the domain/host name.
+         It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
     <idn enabled="All" />
     <iriParsing enabled="true" />
   </uri>
